cmake_minimum_required(VERSION 3.30)
project(homework_CPP)

set(CMAKE_CXX_STANDARD 26)

add_executable(Homework homework.cpp)
add_executable(Homework_2 homework_2.cpp)
add_executable(Classwork cw_1.cpp)
add_executable(classwork_2 cw_2.cpp)
add_executable(classwork_3 cw_3.cpp)
add_executable(classwork_4 cw_4.cpp)
add_executable(homework_3 homework_3.cpp)
add_executable(classwork_5 classwork_5.cpp)