cmake_minimum_required(VERSION 3.30)
project(homework_CPP)

set(CMAKE_CXX_STANDARD 26)

add_executable(Homework homework.cpp)
add_executable(Homework_2 homework_2.cpp)
add_executable(Classwork cw_1.cpp)
add_executable(classwork_2 cw_2.cpp)
add_executable(classwork_3 cw_3.cpp)
add_executable(classwork_4 cw_4.cpp)
add_executable(homework_3 homework_3.cpp)
add_executable(classwork_5 classwork/classwork_5.cpp)
add_executable(classwork_6 classwork_6.cpp)
add_executable(classwork_7 classwork_7.cpp)
add_executable(homework_4 homework_4.cpp)
add_executable(homework_5 homework_5.cpp)
add_executable(homework_6 homework_6.cpp)
add_executable(classwork_8 classwork_8.cpp)
add_executable(classwork_9 classwork_9.cpp)
add_executable(homework_7 homework_7.cpp)
add_executable(classwork_10 classwork_10.cpp)
add_executable(homework_8 homework_8.cpp)
add_executable(classwork_11 classwork_11.cpp)
add_executable(homework_9 homework_9.cpp)
add_executable(classwork_12 classwork_12.cpp)
add_executable(classwork_13 classwork_13.cpp)